-autoselect first time in running programs if date selection is changed